@@ -1,6 +1,6 @@
 Primary: http://distfiles.master.finkmirrors.net/
-nam-US: http://distfiles.sf.ca.us.finkmirrors.net/
+nam-US: http://distfiles.sfo.ca.us.finkmirrors.net/
 nam-US: http://distfiles.msn.wi.us.finkmirrors.net/
 nam-US: http://distfiles.dkx.tn.us.finkmirrors.net/
 eur-hr: http://distfiles.rjk.hr.eu.finkmirrors.net/
-Timestamp: 2003-10-31
+Timestamp: 2003-11-18
